--- a/package.json
+++ b/package.json
@@ -13,7 +13,9 @@
     "framer-motion": "^3.6.2",
     "react": "^17.0.1",
     "react-dom": "^17.0.1",
+    "react-icons": "^4.2.0",
     "react-scripts": "4.0.2",
+    "react-use": "^17.1.1",
     "web-vitals": "^1.1.0"
   },
   "scripts": {
